# blivedm_rs

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.en.md  README.md  README.zh.md  TTS_USAGE.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: auth.rs  browser_cookies.rs  lib.rs  models.rs  scheduler.rs  websocket.rs
client/test/: main.rs
danmu/: Cargo.toml
danmu/src/: config.rs  main.rs
doc/: _coverpage.md  index.html  usage.md
docs/: README.md  _sidebar.md  api.md  architecture.md  browser-cookies.md  client.md  danmu.md  index.html  plugins.md  scheduler.md  tts-setup.md  usage.md
examples/: Cargo.toml  api.http  browser_cookie_test.rs  integration_bili_live_client.rs  simple_client.rs  tts_example.rs
plugins/: Cargo.toml
plugins/src/: auto_reply.rs  lib.rs  terminal_display.rs  tts.rs
src/: config.rs  lib.rs  main.rs
src/bili_live_dm/: mod.rs  web.rs
src/client/: auth.rs  browser_cookies.rs  mod.rs  models.rs  scheduler.rs  websocket.rs
src/plugins/: auto_reply.rs  mod.rs  terminal_display.rs  tts.rs
src/support/: mod.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
