[package]
name = "study_imgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta = "0.10.0"
glium = { version = "0.32.1", default-features = true }
image = "0.24.7"
imgui = "0.11.0"
imgui-glium-renderer ="0.11.0"
imgui-winit-support ="0.11.0"

# Pin indirect dependency scoped-tls to 1.0.0
# as 1.0.1 bumped MSRV to 1.59
# Used only in
# imgui-examples -> glium -> glutin -> wayland-client -> scoped-tls
# so not worth bumping MSRV for this basically to keep CI happy
# FIXME: Remove this for imgui-rs v0.10 and bump MSRV
scoped-tls = "=1.0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4.17"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = "*"
futures-channel = "0.3.28"
hyper = { version = "1.0.1", default-features = false, features = ["full"] }
hyper-tls="0.5.0"

url = "2.3.1"
http = "1.0.0"
bytes = "*"
awc = "3.1.1"
reqwest = { version = "0.11.17", default-features = false, features = ["blocking","cookies"] }
openssl = "0.10.29"
os_str_bytes = "6.5.1"
alloc-stdlib = "0.2.2"
huffman="0.0.3"
alloc-no-stdlib = "2.0.3"
brotlic = "0.8.1"

native-tls="0.2.0"
openssl-sys="0.9.95"
tungstenite = "0.20.1"

http-body-util = "0.1.0"
hyper-util =  { version = "0.1.1", default-features = false, features = ["full"] }
# 用于tls
tokio-rustls = { version = "0.24.1", features = ["dangerous_configuration"] }
webpki-roots = "0.25.3"
# 用于正则
regex = "1.5.4"
bililive = "0.1.2"
http-client = "6.5.3"
futures = "0.3.29"
tokio="1.34.0"
