[package]
name = "blivedm"
version = "0.4.4"
edition = "2024"
authors = ["isomo <jiahaoxing2000@gmail.com>"]
description = "Bilibili live room danmaku WebSocket client with TTS and plugin support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jiahaoxiang2000/blivedm_rs"
readme = "README.md"
keywords = ["bilibili", "danmaku", "live", "websocket", "tts"]
categories = ["command-line-utilities", "network-programming"]
publish = true

[lib]
name = "blivedm"
path = "src/lib.rs"

[[bin]]
name = "blivedm"
path = "src/main.rs"

[dependencies]
# Core async runtime
futures = "0.3"
futures-channel = "0.3.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Logging
log = "0.4"
env_logger = "0.11.8"

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

# Client dependencies (WebSocket, HTTP, auth)
reqwest = { version = "0.11.17", default-features = false, features = [
    "blocking",
    "cookies",
    "rustls-tls",
    "json",
] }
native-tls = "0.2.0"
tungstenite = "0.20.1"
http = "0.2.11"
url = "2.3.1"
brotlic = "0.8.1"
md5 = "0.7"

# Browser cookie reading
sqlite = "0.36"
directories = "5.0"
chrono = "0.4"

# Plugin dependencies (TTS)
base64 = "0.21"
rodio = "0.17"
