[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-channel = "0.3.28"
reqwest = { version = "0.11.17", default-features = false, features = [
    "blocking",
    "cookies",
    "rustls-tls",
] }
native-tls = "0.2.0"
tungstenite = "0.20.1"
http = "0.2.11"
url = "2.3.1"
brotlic = "0.8.1"
log = "0.4"
env_logger = "0.11.8"

futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }