[package]
name = "plugins"
version = "0.1.0"
edition = "2024"

[dependencies]
client = { path = "../client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
base64 = "0.21"
log = "0.4"
