[package]
name = "blivedm-plugins"
version = "0.4.1"
edition = "2024"
authors = ["isomo <jiahaoxing2000@gmail.com>"]
description = "Plugin system for Bilibili live room danmaku (terminal display, TTS)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jiahaoxiang2000/blivedm_rs"
readme = "../README.md"
keywords = ["bilibili", "plugins", "tts", "danmaku"]
categories = ["multimedia", "command-line-utilities"]

[dependencies]
client = { package = "blivedm-client", version = "0.4.1", path = "../client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
base64 = "0.21"
rodio = "0.17"
log = "0.4"
